// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingList.vue Should render correct html snapshot with loading 1`] = `
<div class="col-md-6 offset-md-3">
    <!---->
    <h1>Shopping lists</h1>
    <div>Loading...</div>
    <a href="#/addItemsList" class="btn btn-success btn-sm">Add</a>
</div>
`;

exports[`ShoppingList.vue Should render correct html snapshot without loading 1`] = `
<div class="col-md-6 offset-md-3">
    <!---->
    <h1>Shopping lists</h1>
    <ul class="list-unstyled">
        <li>
            <p>
                <a href="#/itemsList/1" class="btn btn-outline-secondary">list1</a>
                <a href="#/editItemsList/1" class="btn btn-warning btn-sm mx-1">Edit</a>
                <a href="#" class="btn btn-danger btn-sm">Delete</a>
            </p>
        </li>
    </ul>
    <a href="#/addItemsList" class="btn btn-success btn-sm">Add</a>
</div>
`;

exports[`ShoppingList.vue Should render error message when backend is not available 1`] = `
<div class="col-md-6 offset-md-3">
    <div>
        <div role="alert" class="alert alert-danger"><strong>Network connection</strong></div>
    </div>
    <h1>Shopping lists</h1>
    <div>Loading...</div>
    <a href="#/addItemsList" class="btn btn-success btn-sm">Add</a>
</div>
`;
